@@ -9,6 +9,10 @@ Changelog
   (they ommitted the max array length parameter of the format). Backported from
   3.1.2. (#199)
 
+- Fixed a bug that could occur when opening a table containing
+  multi-dimensional columns (i.e. via the TDIMn keyword) and then writing it
+  out to a new file. (#201)
+
 
 3.0.11 (unreleased)
 -------------------
@@ -17,6 +21,10 @@ Changelog
   not correctly write the TFORMn keywords for variable-length array columns
   (they ommitted the max array length parameter of the format). Backported from
   3.1.2. (#199)
+
+- Fixed a bug that could occur when opening a table containing
+  multi-dimensional columns (i.e. via the TDIMn keyword) and then writing it
+  out to a new file. Backported from 3.1.2. (#201)
 
 
 3.1.1 (2013-01-02)
